www/styler.css
body
{

  height: 100%;
  color:#ffffff;
  font-weight: 300;  
  background-color: #000000;
  
}

#main-panel
{
	height: 100%;
    width: calc(100% - 180px);
	margin-left: 165px;
	background-color: #000000;
}


#side-panel
{
   display:     block;
    position:   absolute;
   width:       315px;
    top:        0px;
    left:       0px;
   position:    fixed;
   background-color:   #3498d8; 
   border: 0px solid red;
   height: 100%;
   z-index: 900;
}

#side-panel-wrapper
{
    width: 265px;
    margin: 0 auto;
    margin-top: 25px;
    
}


#wrapper 
{
    background-color: #000000;
   /*background: #3498d8;*/
    height: 100%;
    top: 0px;
    left: 0px;
    border: 0px solid green;

}

#leafmap {
    height: calc(100vh - 0px) !important;
    width: calc(100vw - 315px) !important;
    display: block;
    margin-left:135px;
}

.search-button {
    float: right;

}

 .selectize-input { 
   
 }

#title {
  background-image: url('images/save-the-sound-title-06.png');
  background-size: cover;
  min-height:80px;
  width:100%;
  
}
#title-image {
    width: 234px;
    height: 81px;
    display: block;
    border: 2px solid #000000;
    margin: 0 auto;
}

h1 {
    color: #ffffff;
    font-size: 24px;
    font-weight: 700;
    margin: 0 auto;
    margin-top: 20px;
    /*width: 265px;*/
}

p {
    color: #ffffff;
    font-weight: normal;
    font-size: 16px;
    margin: 0 auto;
    /*width: 265px;*/
    margin-top:20px;
    text-align: just;
}

.btn {
    color: #ffffff;
    background-color: #005984;
    border: 0px solid #ffffff;
    margin-top: 8px;
    margin-right: 8px;
    margin-left: 0px;
    /*width: 100px;*/
    font-size: 11px;
    font-weight: bold;
}

.leaflet-popup{
  width:512px;
  
}

.description{
  margin-bottom: 12px;
  
}
.filters{
  font-weight: normal;
  margin-top: 30px;
  
}

/*START POPUP*/

.leaflet-popup-content {
  margin: 0px 0px 0px 0px;
  width: 100% !important;
  display:block;
  border: 0px solid purple;
  
}
.leaflet-popup-content-wrapper{
  padding: 0px 0px 0px 0px;
  
}

.popup-wrapper{
    border: 0px solid red;
    width: 100%;
    min-height: 240px;

}
.popup-title{
  width: 100%;
  height: 50px;
  border: 0px solid blue;
  float: left;
  display: block;
  
}
.popup-title-marker{
  width: 47px;
  height: 47px;
  border: 0px solid green;
  float: left;
  display: block;
  background-size: cover;

  
}
.popup-title-text{
  padding-left:10px;
  
}

.popup-title-h1{
  border:0px solid red; 
  width: 70%; 
  float:left; 
  display:block; 
  font-size: 20px; 
  font-weight: bold;
}
.popup-title-h2{
  line-height: 14px; 
  border:0px solid red; 
  width: 70%; 
  float:left; 
  display:block; 
  font-size: 15px; 
  font-weight: normal;
}
.pu-h2-adj{
  width: 100%;
 /* margin-top:10px;
  */
}
.popup-line{
  float:left;
  clear:left; 
  display:block; 
  padding-top:4px;
  width:100%;
  border: 0px solid red;
  
}
.popup-line-adj{
  padding-top:0px;
  line-height: 15px;
  
}
.popup-image{
  width:160px;
  max-width: 160px;
  min-height: 240px;
  overflow: hidden;
  display: block;
  float: left;
  text-align: center;
  border:0px solid green;
  background-size: cover;
  background-position: center;
   background-repeat: no-repeat;
   border-top-left-radius: 9px;
   border-bottom-left-radius: 9px;

  
}
.pu-img{
   max-width:100%;
    max-height:100%;
    vertical-align: middle;
  
}
.popup-text{
  width:350px;
  display: block;
  padding: 4px 12px 4px 12px;
  float: left;
  border:0px solid pink;
  
}
/*END KEY POPUP*/

/*START KEY OVERLAY*/
.key-overlay-container{
  position: absolute; 
  left: calc(50vw - 150px) !important;
  
}

.key-overlay{
  width:566px; 
  height:74px;
  background-color: #ffffff;
  position: absolute; 
  left: -25%;
  display:block;
  bottom: 26px;
   z-index: 800;
    margin: 0 auto;
   
    border:2px solid rgba(0,50,50,35%);
    border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
}



.key-image{
   background-size: cover;
    background-image: url('images/key.png');
    width:500px; 
    height:70px;
    float: right;
    display: inline-block;
     border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
}
.key-text{
   width:60px; 
     
    float: left;
    display: inline-block;
    color: #000000;
    text-align: center;
    margin-top:25px;
    background-color: #ffffff;
    border:0px solid blue;
    font-weight:normal;
}

/*END KEY OVERLAY*/

